build/log/idf_py_stderr_output_97151
In file included from /home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:8:
/home/vicenterey/esp/idf/esp-idf/components/driver/deprecated/driver/mcpwm.h:15:2: warning: #warning "legacy MCPWM driver is deprecated, please migrate to the new driver (include driver/mcpwm_prelude.h)" [-Wcpp]
   15 | #warning "legacy MCPWM driver is deprecated, please migrate to the new driver (include driver/mcpwm_prelude.h)"
      |  ^~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc: In function 'void RespondToDetection(float)':
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:110:5: error: 'move_servo_to_zero_angle' was not declared in this scope
  110 |     move_servo_to_zero_angle();
      |     ^~~~~~~~~~~~~~~~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:114:5: error: 'move_servo_to_ninety_angle' was not declared in this scope
  114 |     move_servo_to_ninety_angle();
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~
/home/vicenterey/esp/projects_tf/model/person_detection/main/detection_responder.cc:118:5: error: 'move_servo_to_min_angle' was not declared in this scope; did you mean 'move_servo_to_90_degrees'?
  118 |     move_servo_to_min_angle();
      |     ^~~~~~~~~~~~~~~~~~~~~~~
      |     move_servo_to_90_degrees
make[3]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/detection_responder.cc.obj] Error 1
make[2]: *** [CMakeFiles/Makefile2:5675: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:2437: CMakeFiles/flash.dir/rule] Error 2
make: *** [Makefile:299: flash] Error 2
